# web-server

./: .dockerignore  Dockerfile.test  README.md  config.json  docker-compose.yml  dockerfile  server  server.cpp  server.crt  server.key  utils.cpp  utils.hpp
tests/: CMakeLists.txt  config.test.json  run_tests  test_ends_with.cpp  test_get_mime_type.cpp  test_parse_request.cpp
www/: about.html  index.html  styles.css
